--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Name List App</title>
+    <title>Besant Techno</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; }
         input, button { margin: 5px; padding: 10px; }
@@ -12,8 +12,8 @@
         th { background-color: #f4f4f4; }
     </style>
 </head>
-<body>
-    <h1>Student Data</h1>
+<body background="red">
+    <h1>STUDENT INFO</h1>
     <input type="text" id="nameInput" placeholder="Enter a name">
     <button onclick="addName()">Add Name</button>
 
