--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         th { background-color: #f4f4f4; }
     </style>
 </head>
-<body background="red">
+<body>
     <h1>STUDENT INFO</h1>
     <input type="text" id="nameInput" placeholder="Enter a name">
     <button onclick="addName()">Add Name</button>
