--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Besant Techno</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; }
+        body { font-family: Arial, sans-serif; text-align: center; background-color: blue;}
         input, button { margin: 5px; padding: 10px; }
         table { margin: 20px auto; border-collapse: collapse; width: 50%; }
         th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
